--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.15",
+    "@react-spring/web": "^9.6.1",
+    "@types/react-cookies": "^0.1.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.0",
+    "buffer": "^6.0.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "yup": "^0.32.11"
