--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: price_it_frontend
     build: .
     volumes:
-      - .:/app
-      - /app/node_modules
+      - .:/src
+      - /src/node_modules
     ports:
       - 5173:5173
