--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_SEARCH_BASE_URL=https://priceit-backend.zamanien.com/api
 # VITE_SEARCH_BASE_URL=http://localhost:8080/api
 VITE_AUTH_BASE_URL=https://priceit-auth.zamanien.com/api
 # VITE_AUTH_BASE_URL=http://localhost:8000/api
+NODE_ENV=production
