--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ VITE_SEARCH_BASE_URL=https://priceit-backend.zamanien.com/api
 VITE_AUTH_BASE_URL=https://priceit-auth.zamanien.com/api
 # VITE_AUTH_BASE_URL=http://localhost:8000/api
 NODE_ENV=production
+PORT=5173
