--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 8080",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "vite --port 8080"
+    "start": "vite"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
